--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <title>Google Maps API</title>
     <script src="map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1avA8Ag5EUyC45VJIEYvnTWIzfUCYS0s&callback=initMap" async defer></script>
-    <style>
-      #map {
-        height: 400px;
-        width: 100%;
-      }
-    </style>
+    <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+      <div id="header"></div>
     <div id="map"></div>
+    <div id="background"></div>
   </body>
 </html>
